--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
     
 }
 
+/* 
 
 .logoContainer {
     background-color: #414042;
@@ -84,6 +85,9 @@ header {
     text-decoration: underline;
     text-decoration-thickness: 5px;
 }
+
+*/
+
 
 
 .heroContainer {
