--- a/css/style.css
+++ b/css/style.css
@@ -858,6 +858,7 @@ footer {
     padding-top: 30px;
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 100px;
 }
 
     #aboutMeDescription p {
