--- a/css/style2.css
+++ b/css/style2.css
@@ -760,6 +760,10 @@ footer {
         z-index: 1;
         
     }
+
+    input[type="checkbox"]:focus{
+        outline:0;
+    }
     
     .menu-wrap .toggler {
         position: absolute;
