--- a/css/style2.css
+++ b/css/style2.css
@@ -762,7 +762,7 @@ footer {
     }
 
     input[type="checkbox"]:focus{
-        outline:0;
+        outline:none;
     }
     
     .menu-wrap .toggler {
@@ -770,7 +770,7 @@ footer {
         top: 0;
         left: 0;
         z-index: 2;
-        cursor: pointer;
+        
         width: 50px;
         height: 50px;
         opacity: 0;
