--- a/css/style2.css
+++ b/css/style2.css
@@ -761,16 +761,20 @@ footer {
         
     }
 
-    input[type="checkbox"]:focus{
-        outline:none;
-    }
-    
+    input,
+    textarea,
+    button,
+    select,
+    a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
     .menu-wrap .toggler {
         position: absolute;
         top: 0;
         left: 0;
         z-index: 2;
-        
+        cursor: pointer;
         width: 50px;
         height: 50px;
         opacity: 0;
