--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,12 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Elza;
+    font-family: 'Elza', 'Roboto', sans-serif;
     src: url('https://use.typekit.net/oqf7lfy.css');
     overflow: scroll;
     overflow-x: hidden;
+    background-color: #414042;
 }
-
-header {
-    
-}
-
-
 
 .logoContainer {
     background-color: #414042;
@@ -24,6 +19,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .logo {
@@ -33,6 +29,8 @@ header {
     width: 276px;
     padding-top: 16px;
 }
+
+
 
 .navbarContainer {
     background-color: #414042;
@@ -86,7 +84,150 @@ header {
     text-decoration-thickness: 5px;
 }
 
+:root {
+    --primary-color: #414042;
+    --overlay-color: rgba(65, 64, 66, 0.95);
+    --menu-speed: 0.75s;
+}
 
+.menu-wrap {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.menu-wrap .toggler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+}
+
+.menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 60px;
+    height: 60px;
+    padding: 1rem;
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrap .hamburger > div {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+}
+
+.menu-wrap .hamburger > div:before,
+.menu-wrap .hamburger > div:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+}
+
+.menu-wrap .hamburger > div:after {
+    top: 10px;
+} 
+
+.menu-wrap .toggler:checked + .hamburger > div {
+    transform: rotate(135deg);
+}
+
+.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+.menu-wrap .toggler:checked:hover + .hamburger > div {
+    transform: rotate(225deg);
+}
+
+.menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu > div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu > div > div {
+    opacity: 1;
+    transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrap .menu > div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    width: 6000vw;
+    height: 6000vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+}
+
+.menu-wrap .menu > div > div {
+    text-align: center;
+    max-width: 90vw;
+    max-width: 100vw;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu > div > div > ul > li {
+    list-style: none;
+    color: white;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.menu-wrap .menu > div > div > ul > li > a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.4s ease;
+}
+
+.heroSection {
+    width: 100%;
+    height: 440px;
+    background-color: #414042;
+}
 
 
 .heroContainer {
@@ -110,6 +251,7 @@ header {
     height: 110px;
     padding-bottom: 25px;
     padding-right: 2px;
+    position: static;
 }
 
 .heroDescriptionContainer {
@@ -161,6 +303,10 @@ header {
       transform: translateY(10px);
     }
   }
+
+.projectSection {
+    background-color: white;
+}
 
 
 .projectGridContainer {
@@ -608,6 +754,168 @@ footer {
 }
 
 @media only screen and (max-width: 875px) {
+
+    .logoContainer {
+        background-color: #414042;
+        height: 139px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
+    
+    :root {
+        --primary-color: #414042;
+        --overlay-color: rgba(65, 64, 66, 0.98);
+        --menu-speed: 0.75s;
+    }
+    
+    .menu-wrap {
+        visibility: visible;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        margin-top: 25px;
+    }
+
+    .menu li {
+        text-decoration: none;
+        font-size: 18px;
+        color: white;
+        padding-left: 99px;
+        padding-right: 99px;
+        letter-spacing: 0.15em;
+        font-weight: 300;
+        font-family: 'Elza';
+    }
+
+    
+    .menu-wrap .toggler {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        opacity: 0;
+    }
+    
+    .menu-wrap .hamburger {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 60px;
+        height: 60px;
+        padding: 1rem;
+        background: var(--primary-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .menu-wrap .hamburger > div {
+        position: relative;
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.4s ease;
+    }
+    
+    .menu-wrap .hamburger > div:before,
+    .menu-wrap .hamburger > div:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -10px;
+        width: 100%;
+        height: 2px;
+        background: inherit;
+    }
+    
+    .menu-wrap .hamburger > div:after {
+        top: 10px;
+    } 
+    
+    .menu-wrap .toggler:checked + .hamburger > div {
+        transform: rotate(135deg);
+    }
+    
+    .menu-wrap .toggler:checked + .hamburger > div:before,
+    .menu-wrap .toggler:checked + .hamburger > div:after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+    
+    .menu-wrap .toggler:checked:hover + .hamburger > div {
+        transform: rotate(225deg);
+    }
+    
+    .menu-wrap .toggler:checked ~ .menu {
+        visibility: visible;
+    }
+    
+    .menu-wrap .toggler:checked ~ .menu > div {
+        transform: scale(1);
+        transition-duration: var(--menu-speed);
+    }
+    
+    .menu-wrap .toggler:checked ~ .menu > div > div {
+        opacity: 1;
+        transition: opacity 0.4s ease;
+    }
+    
+    .menu-wrap .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 6000vw;
+        height: 6000vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+    
+    .menu-wrap .menu > div > div {
+        text-align: center;
+        max-width: 90vw;
+        max-width: 100vw;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+    }
+    
+    .menu-wrap .menu > div > div > ul > li {
+        list-style: none;
+        color: white;
+        font-size: 1.5rem;
+        padding: 1rem;
+    }
+    
+    .menu-wrap .menu > div > div > ul > li > a {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.4s ease;
+    }
+
     .navbarContainer {
         display: none;
     }
@@ -745,6 +1053,7 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
+
     .navbarContainer {
         display: none;
     }
