--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Elza', 'Roboto', sans-serif;
+    font-family: 'elza-narrow', sans-serif;
     src: url('https://use.typekit.net/oqf7lfy.css');
     overflow: scroll;
     overflow-x: hidden;
@@ -221,6 +221,19 @@ body {
     color: inherit;
     text-decoration: none;
     transition: color 0.4s ease;
+}
+
+.menuActive {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #99D5CA;
+    padding-left: 99px;
+    padding-right: 99px;
+    letter-spacing: 0.15em;
+    font-weight: 300;
+    font-family: 'Elza';
+    text-decoration: underline;
+    text-decoration-thickness: 5px;
 }
 
 .heroSection {
