--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 @import url("https://use.typekit.net/oqf7lfy.css");
 
+@font-face {
+    font-family: "elza-narrow";
+    src: url('https://use.typekit.net/oqf7lfy.css');
+    font-weight: normal;
+    font-style: normal; 
+}
+
 * {
     padding: 0;
     margin: 0;
