--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ html.sr .load-hidden {
 
 .heroSection {
     width: 100%;
-    height: 440px;
+    height: 1000px;
     background-color: #414042;
 }
 
@@ -268,7 +268,7 @@ html.sr .load-hidden {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-
+    transform: translateY(120px);
 }
 
 
@@ -338,7 +338,7 @@ html.sr .load-hidden {
 .projectGridContainer {
     margin: 0 auto;
     padding-top: 400px;
-    padding-bottom: 280px;
+    padding-bottom: 400px;
     width: 1200px;
     height: 932px;
     display: grid;
@@ -550,6 +550,10 @@ html.sr .load-hidden {
     transition: .5s;
 }
 
+.skillsSection {
+    padding-top: 200px;
+}
+
 #skillsTitleContainer {
     width: 100%;
     display: flex;
@@ -724,13 +728,21 @@ footer {
 }
 
 @media only screen and (max-width: 1200px) {
+    .heroSection {
+        height: 1200px;
+    }
+
+    .heroContainer {
+        transform: translateY(220px);
+    }
+    
     .projectGridContainer {
         margin-left: auto;
         margin-right: auto;
         width: 100%;
         height: auto;
-        padding-top: 160px;
-        padding-bottom: 160px;
+        padding-top: 300px;
+        padding-bottom: 300px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-areas: 
@@ -1105,8 +1117,8 @@ footer {
     margin-right: auto;
     width: 100%;
     height: auto;
-    padding-top: 160px;
-    padding-bottom: 160px;
+    padding-top: 300px;
+    padding-bottom: 300px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: 
@@ -1115,6 +1127,25 @@ footer {
         "goalAssistantCard" 
         "trvlCard"
     ;
+}
+
+.heroContainer {
+    width: 100%;
+    height: 440px;
+    background-image: url('../images/hero_background_pattern.png');
+    background-color: #414042;
+    background-size: 1280px 440px;
+    background-repeat: repeat-x;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    transform: translateY(100px);
+}
+
+.heroSection {
+    height: 800px;
 }
 
 .npoCard {
