--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,19 @@ html.sr .load-hidden {
     60% {
       transform: translateY(10px);
     }
-  }
+}
+
+
+.grow { 
+    transition: all .2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grow:hover { 
+    transform: scale(1.1); 
+}
 
 .projectSection {
     background-color: white;
@@ -350,12 +362,19 @@ html.sr .load-hidden {
     ;
 }
 
+
+
 .npoCard {
     grid-area: npoCard;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+}
+
+.npoCard a {
+    color: black;
 }
 
 .npoImages {
@@ -429,6 +448,10 @@ html.sr .load-hidden {
     justify-content: center;
 }
 
+.blmCard a {
+    color: black;
+}
+
 .blmImages {
     width: 471px;
     height: 220px;
@@ -441,6 +464,10 @@ html.sr .load-hidden {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.goalAssistantCard a {
+    color: black;
 }
 
 .goalAssistantImage {
@@ -456,10 +483,16 @@ html.sr .load-hidden {
     justify-content: center;
 }
 
+.trvlCard a {
+    color: black;
+}
+
 .trvlImage {
     width: 462px;
     height: 257px;
 }
+
+
 
 .aboutMeSection {
     background-color: #414042;
@@ -474,6 +507,8 @@ html.sr .load-hidden {
     padding-left: 60px;
     padding-right: 60px;
 }
+
+
 
 #aboutMePicture {
     width: 395px;
