--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,65 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'elza-narrow', sans-serif;
-   
     overflow: scroll;
     overflow-x: hidden;
     background-color: #414042;
+}
+
+
+
+.loaderBackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: #414042;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loaderBackground img {
+    width: 350px;
+    height: 350px;
+}
+
+@keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(1080deg);
+    }
+  }
+
+.loaderBackground img {
+    animation: rotate 2s ease-in-out;
+}
+
+.fadeIn {
+    animation: fadeIn ease 2s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.fadeOut {
+    animation: fadeOut ease 2s;
+    animation-delay: 2s;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 html.sr .load-hidden {
