--- a/css/style2.css
+++ b/css/style2.css
@@ -17,13 +17,15 @@ body {
     padding: 0;
     font-family: 'elza-narrow', sans-serif;
     overflow: scroll;
-    overflow-x: initial;
+    overflow-x: hidden;
     background-color: #414042;
 }
 
 .loaderAnimationContainer {
     width: 100vw;
     height: 100vh;
+    position: absolute;
+    z-index: 3;
 }
 
 .loaderBackground {
@@ -1184,6 +1186,11 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
+
+.loaderBackground img {
+    width: 200px;
+    height: 200px;
+}
 
 .navbarContainer {
     display: none;
