--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ header {
     width: 50px;
     height: 50px;
     opacity: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .menu-wrap .hamburger {
