--- a/css/style2.css
+++ b/css/style2.css
@@ -12,8 +12,6 @@
     margin: 0;
 }
 
-
-
 body {
     margin: 0;
     padding: 0;
@@ -187,6 +185,7 @@ header {
     width: 50px;
     height: 50px;
     opacity: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .menu-wrap .hamburger {
