--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,10 @@ header {
     -webkit-tap-highlight-color: transparent;
 }
 
+.menu-wrap li {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .menu-wrap .hamburger {
     position: absolute;
     top: 0;
@@ -341,7 +345,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    transform: translateY(120px);
+    transform: translateY(80px);
 }
 
 
@@ -496,6 +500,10 @@ header {
     text-align: center;
 }
 
+.projectGridContainer a {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .projectButton:hover {
     background-color: #414042;
     color: #99D5CA;
@@ -570,7 +578,6 @@ header {
 .aboutMeSection {
     background-color: #414042;
     width: 100%;
-    padding-top: 75px;
 }
 
 .aboutMeContainer {
